# medmnist

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  cliff.toml  export.py  forge.py  healt_check.py  main.py  optimize.py  pyproject.toml  requirements.txt  setup.py  smoke_test.py  sonar-project.properties  train_bloodmnist.py
.github/workflows/: ci.yml  publish.yml  release.yml
docker/: build.sh
docs/guide/: ARCHITECTURE.md  ARTIFACTS.md  CONFIGURATION.md  DOCKER.md  EXPORT.md  FRAMEWORK.md  OPTIMIZATION.md  TESTING.md  TRACKING.md
docs/media/: config.yaml
notebooks/: 01_quickstart_bloodmnist_cpu.ipynb  02_galaxy10_optuna_model_search.ipynb
orchard/: README.md  cli_app.py
orchard/core/: __init__.py  cli.py  orchestrator.py
orchard/data_handler/: __init__.py  data_explorer.py  dataset.py  factory.py  fetcher.py  galaxy10_converter.py  loader.py  synthetic.py  (+1 more)
recipes/: config_224x224_efficientnet_v0.yaml  config_28x28_resnet_18_adapted.yaml  config_convnext_tiny.yaml  config_efficientnet_b0.yaml  config_galaxy10_efficientnet_b0.yaml  config_galaxy10_vit_tiny.yaml  config_mini_cnn.yaml  config_mini_cnn_64.yaml  config_resnet_18.yaml  config_resnet_18_adapted.yaml  config_vit_tiny.yaml  optuna_64.yaml  optuna_cifar100_mini_cnn.yaml  optuna_cifar100_pretrained.yaml  optuna_convnext_tiny.yaml  optuna_efficientnet_b0.yaml  optuna_galaxy10_efficientnet_b0.yaml  optuna_galaxy10_vit_tiny.yaml  optuna_mini_cnn.yaml  optuna_resnet_18.yaml  optuna_resnet_18_adapted.yaml  optuna_vit_tiny.yaml
scripts/: check_quality.sh  check_quality_full.sh  evaluation.py  update-changelog.sh  utils.py
tests/: README.md  conftest.py  health_check.py  smoke_test.py  test_dataset.py  test_engine.py  test_hardware.py  test_metadata.py  test_optuna_infra.py  test_training.py
tools/: health_check.py  unit_test.py
visionforge.egg-info/: PKG-INFO
(+200 files in other folders)
